--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -1,13 +1,18 @@
 <div class="" *ngIf="hasEvents">
-  <div *ngIf="filtersApplied" class="d-flex flex-row" style="flex-wrap:wrap">
-    <div  *ngFor="let tag of tags | mapToIterable">
-      <div class="filter-tag mb-1" *ngIf="tag.val.selected">
-        <span class="tag-text">{{tag.key}}</span>
+  <div class="d-flex flex-row" style="flex-wrap:wrap">
+    <div *ngFor="let clubSlug of clubFilters">
+      <div class="filter-tag mb-1">
+        <span class="tag-text">{{clubSlug}}</span>
+      </div>
+    </div>
+    <div *ngFor="let tag of tagFilters">
+      <div class="filter-tag mb-1">
+        <span class="tag-text">{{tag}}</span>
       </div>
     </div>
   </div>
   <div *ngFor="let event of events" style="margin-bottom:1rem; cursor:pointer">
-    <div *ngIf="!filtersApplied || matchesTags(event)">
+    <div *ngIf="!hasFilters() || matchesTags(event)">
     <!-- <span class="event-divider mt-4">{{object.val.divider}}</span><hr/> -->
       <div class="card mt-3" *ngIf="(clubID == 0 || clubID === event.club_id)" (click)="onSelect(event)">
         <div class="card-img-top">
