--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -58,20 +58,20 @@
             <div class="card-block">
               <div id="accordion" role="tablist" aria-multiselectable="true">
                 
-                <div class="card" [attr.id]="'accordion_' + i" *ngFor="let portfolio of fullTeam.portfolios; let i = index;">
+                <div [attr.id]="'accordion_' + i" *ngFor="let portfolio of fullTeam.portfolios; let i = index;">
                   
                   <div class="card-header" role="tab" id="headingOne">
                     <h5 class="mb-0">
                       <a class="collapsed" data-toggle="collapse" [attr.data-parent]="'#accordion_' + i" [attr.href]="'#collapseOne_' + i" aria-expanded="true" aria-controls="collapseOne">
-                        {{portfolio.title}}
+                        {{portfolio.title}}&nbsp;<div><span class="glyphicon glyphicon-search" aria-hidden="true"></span></div>
                       </a>
                     </h5>
                   </div>
                   
-                  <div [attr.id]="'collapseOne_' + i" class="collapse" role="tabpanel" aria-labelledby="headingOne">
-                    <div class="card-block d-flex justify-content-between flex-wrap pl-5 pr-5">
+                  <div [attr.id]="'collapseOne_' + i" class="collapse show" role="tabpanel" aria-labelledby="headingOne">
+                    <div class="card-block d-flex justify-content-around flex-wrap">
                       <div *ngFor="let person of portfolio.team" class="persons">
-                        <img src="{{person.image}}" class="head-shot">
+                        <div class="head-shot"><img src="{{person.image}}"></div>
                         <h6 class="mt-2">{{person.name}}</h6>
                         <p class="title-text">{{person.title}}</p>
                       </div>
