--- a/src/app/newsfeed/newsfeed.component.html
+++ b/src/app/newsfeed/newsfeed.component.html
@@ -1,18 +1,6 @@
 <div class="" *ngIf="hasEvents">
-  <div class="d-flex flex-row" style="flex-wrap:wrap">
-    <div *ngFor="let clubSlug of clubFilters">
-      <div class="filter-tag mb-1">
-        <span class="tag-text">{{clubSlug}}</span>
-      </div>
-    </div>
-    <div *ngFor="let tag of tagFilters">
-      <div class="filter-tag mb-1">
-        <span class="tag-text">{{tag}}</span>
-      </div>
-    </div>
-  </div>
   <div *ngFor="let event of events" style="margin-bottom:1rem; cursor:pointer">
-    <div *ngIf="!hasFilters() || matchesTags(event)">
+    <div *ngIf="isVisible(event)">
     <!-- <span class="event-divider mt-4">{{object.val.divider}}</span><hr/> -->
       <div class="card mt-3" *ngIf="(clubID == 0 || clubID === event.club_id)" (click)="onSelect(event)">
         <div class="card-img-top">
@@ -31,12 +19,12 @@
               {{event.sub_heading}} <br>
           </div>
         </div>
-        <!-- <div class="card-footer py-2">
+        <div class="card-footer py-2">
           <img src="assets/img/icons/heart.svg" class="icon">
           <img src="assets/img/icons/bookmark.svg" class="icon">
           <img src="assets/img/icons/arrow.svg" class="icon">
           <img src="assets/img/icons/three-dots.svg" class="icon" style="float:right">
-        </div> -->
+        </div>
       </div>
     </div>
   </div>
