--- a/src/app/event-page/event-page.component.css
+++ b/src/app/event-page/event-page.component.css
@@ -14,6 +14,7 @@ h1, h2, h3, h4{
 
 .card-1-block {
   margin-left:12%;
+  margin-right:12%;
 }
 
 .card-1 {
@@ -63,7 +64,7 @@ h1, h2, h3, h4{
   text-align:center;
 }
 .content-header {
-  font-family:Lato-Medium;
+  font-family:Lato-Bold;
   font-size:12px;
   color:#000000;
   letter-spacing:0;
