--- a/src/app/club-detail/club-detail.component.html
+++ b/src/app/club-detail/club-detail.component.html
@@ -1,6 +1,6 @@
 <div class="container-fluid" style="background-color:#F5F5F5">
-	<div class="row">
-  	<div class="col-sm-8 col-md-8 col-lg-8 mt-4 left-content-pane">
+  <div class="row">
+    <div class="col-sm-11 col-md-11 col-lg-11 mt-4 left-content-pane">
       <div class="card">
         <div class="card-img-top">
           <img class="card-img-top club-banner" src="assets/img/{{club.app_banner}}">
@@ -27,6 +27,10 @@
           </div>
         </div>
       </div>
+    </div>
+  </div>
+  <div class="row">
+    <div class="col-sm-8 col-md-8 col-lg-8 mt-4 left-content-pane">
       <div class="row mt-2">
         <div class="col-sm-4 col-md-4 col-lg-4">
           <div class="card sticky">
@@ -84,7 +88,7 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-3 col-md-3 col-lg-3 mt-4" style="padding-left:0">
+    <div class="col-sm-3 col-md-3 col-lg-3 mt-5" style="padding-top: 12px padding-left: 0px">
 			<social-links-sidebar [club]="club"></social-links-sidebar>
       <job-posting-sidebar [clubID]="club.id"></job-posting-sidebar>
     </div>
