--- a/src/app/hiring/hiring.component.html
+++ b/src/app/hiring/hiring.component.html
@@ -1,21 +1,15 @@
-<div class="container-fluid">
-  <div class="row justify-content-center">
-    <div class="col-sm-5 col-md-5 col-lg-5 mt-4 px-2">
-      <div class="" *ngFor="let posting of jobPostings">
-        <div class="card" (click)="onSelect(posting)">
-          <div class="card-block">
-            <div class="d-flex mb-2">
-              <img src="assets/img/thumbnails/{{clubs[posting.club_id].app_logo}}" class="club-avatar mr-3" alt="">
-              <div class="d-flex flex-column">
-                <h4 class="club-title mb-1">{{posting.title}}</h4>
-                <h4 class="card-datetime">{{clubs[posting.club_id].name}}</h4>
-              </div>
-            </div>
-          <div class="card-text mb-2">
-              {{posting.description}}
-          </div>
-          </div>
+<div class="" *ngFor="let posting of jobPostings">
+  <div *ngIf="(clubID == 0 || clubID === posting.club_id)" class="card pointer py-0" (click)="onSelect(posting)">
+    <div class="card-block">
+      <div class="d-flex mb-2">
+        <img src="assets/img/thumbnails/{{clubs[posting.club_id].app_logo}}" class="club-avatar mr-3" alt="">
+        <div class="d-flex flex-column">
+          <h4 class="club-title mb-1">{{posting.title}}</h4>
+          <h4 class="card-datetime">{{clubs[posting.club_id].name}}</h4>
         </div>
+      </div>
+      <div class="card-text mb-2">
+        Richard
       </div>
     </div>
   </div>
