--- a/src/app/sidebar/job-posting-sidebar.html
+++ b/src/app/sidebar/job-posting-sidebar.html
@@ -1,6 +1,6 @@
 <div class="card sticky">
   <h3 class="card-header card-header-text">Open Positions</h3>
-  <ul class="list-group list-group-flush" *ngFor="let posting of jobPostings; let i = index" style="cursor: pointer;">
+  <ul class="list-group list-group-flush" *ngFor="let posting of jobPostings; let i = index" style="cursor: pointer;" #myList>
     <li class="list-group-item d-flex flex-row" *ngIf="i < 3 && (posting.club_id === clubID || clubID ===0)" (click)="viewJobPost(posting.id)">
       <img src="assets/img/thumbnails/{{clubs[posting.club_id].app_logo}}" class="open-positions-icon mr-4">
       <div class="d-flex flex-column">
@@ -10,7 +10,7 @@
     </li>
   </ul>
 
-  <div class="card-footer py-2" style="text-align:center">
-    <a class="see-other-postings" routerLink="/hiring">See all job postings</a>
+  <div class="card-footer py-1" style="text-align:center">
+    <a class="see-other-postings" routerLink="/hiring">See all positions</a>
   </div>
 </div>
