--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -9,9 +9,10 @@
     </div>
 
   <ul class="list-group">
-    <li class="list-group-item list-group-item-action py-2" style="border-radius:0; cursor:pointer" routerLink="/update" *ngIf="tokenService.userSignedIn()">Update Profile</li>
-    <li class="list-group-item list-group-item-action py-2" style="border-radius:0; cursor:pointer" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">All Events</li>
-    <li class="list-group-item list-group-item-action py-2" style="border-radius:0; cursor:pointer" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Saved Events</li>
+    <li class="list-group-item list-group-item-action py-2" style="cursor:pointer" routerLink="/update" *ngIf="tokenService.userSignedIn()">Update Profile</li>
+    <li class="list-group-item list-group-item-action py-2" style="cursor:pointer" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">Events and Blog</li>
+    <li class="list-group-item list-group-item-action py-2" style="cursor:pointer" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Events</li>
+    <li class="list-group-item list-group-item-action py-2" style="cursor:pointer" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Blog</li>
   </ul>
 </div>
 <div class="card sticky" *ngIf="!tokenService.userSignedIn()">
