--- a/src/app/update/update.component.css
+++ b/src/app/update/update.component.css
@@ -10,9 +10,22 @@
   border-radius: 0;
 }
 .card-title{
-  font-family:Lato-Semibold;
+  font-family:Lato-Black;
+}
+.avatar {
+	border-radius: 50%;
+	width: 30%;
+	height: auto;
 }
 
 h2 {
-  font-family:Lato-Semibold;
+  font-family:Lato-Black;
+}
+
+p {
+	font-family: Lato-Light;
+}
+
+.form-group[_ngcontent-c2] label[_ngcontent-c2] {
+	font-family: Lato-Semibold;
 }
