--- a/src/app/update/update.component.html
+++ b/src/app/update/update.component.html
@@ -1,23 +1,41 @@
 <div class="container-fluid">
   <div class="row justify-content-center">
     <div class="col-sm-9 col-md-9 col-lg-9">
-      <div class="card mt-4">
+      <h2 class="card card-title card-block mt-4 mb-0">Personal Information</h2>
+      <div class="card mt-0">
         <div class="card-block">
-          <h4 class="card-title">Personal Information</h4>
           <div class="form-group">
+            <div class="d-flex flex-row">
+              
+              <div class="d-flex flex-column mr-4 align-items-center" style="width:45%">
+                 <img src="https://www2.mmu.ac.uk/media/mmuacuk/style-assets/images/r-research/profile-Zeyad.jpg" class="avatar mr-2">
+                 <p class="mb-0"><span class="glyphicon glyphicon-edit" aria-hidden="true"></span>Edit</p>
+              </div>
+              <div class="d-flex flex-column" style="width:45%">
+                <label for="firstname">Email Address (Username)</label>
+                <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.last_name">
+                <label for="firstname">Password</label>
+                <input type="Password" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.last_name">
+              </div>
+            </div>
+
             <div class="d-flex flex-row">
               <div class="d-flex flex-column mr-4" style="width:45%">
                 <label for="firstname">First Name</label>
                 <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.first_name">
+                <label for="firstname">School Program</label>
+                <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.program">
+                <label for="firstname">Profile Header</label>
+                <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.profile_header">
               </div>
               <div class="d-flex flex-column" style="width:45%">
                 <label for="firstname">Last Name</label>
                 <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.last_name">
+                <label for="firstname">School Year</label>
+                <input type="email" class="form-control mb-3" id="firstname" style="width: 30%" [(ngModel)]="updateObj.school_year">
               </div>
             </div>
 
-            <label for="firstname">School Program</label>
-            <input type="email" class="form-control mb-3" id="firstname" [(ngModel)]="updateObj.program">
             <label for="firstname">What's your story?</label><br>
             <textarea name="name" rows="3" style="width:100%" [(ngModel)]="updateObj.summary"></textarea>
             <label class="form-check-label">
@@ -30,20 +48,20 @@
         </div>
       </div>
       <br>
-      <h2>Work Experience</h2>
-      <div class="card my-3" *ngFor="let exp of work_experiences_attributes; let i = index">
+      <h2 class="card card-title card-block mt-2 mb-0">Work Experience</h2>
+      <div class="card mb-3" *ngFor="let exp of work_experiences_attributes; let i = index">
         <div class="card-block">
           <div class="form-group">
-            <label for="firstname">Company</label>
-            <input type="text" class="form-control mb-3" id="firstname" [(ngModel)]="exp.company">
-            <label for="firstname">Title</label>
-            <input type="text" class="form-control mb-3" id="firstname" [(ngModel)]="exp.title">
             <div class="d-flex flex-row align-content-end">
               <div class="d-flex flex-column mr-auto" style="width:48%">
+                <label for="firstname">Company</label>
+                <input type="text" class="form-control mb-3" id="firstname" [(ngModel)]="exp.company">
                 <label for="firstname">Start Date</label>
                 <input type="text" class="form-control mb-3" id="firstname" placeholder="mm/dd/yyyy" [(ngModel)]="exp.started_date">
               </div>
               <div class="d-flex flex-column" style="width:48%">
+                <label for="firstname">Title</label>
+                <input type="text" class="form-control mb-3" id="firstname" [(ngModel)]="exp.title">
                 <label for="firstname">End Date</label>
                 <input type="text" class="form-control mb-3" id="firstname" placeholder="mm/dd/yyyy" [(ngModel)]="exp.end_date">
               </div>
@@ -57,11 +75,12 @@
             <textarea name="name" rows="3" style="width:100%" [(ngModel)]="exp.summary"></textarea>
           </div>
           <button type="button" class="btn btn-danger" (click)="removeWorkExp(i)">Remove Work Experience</button>
+          <button type="button" class="btn btn-primary" (click)="addWorkExp()">Add more work experience</button>
         </div>
       </div>
-
-      <button type="button" class="btn btn-primary" (click)="addWorkExp()">Add more work experience</button>
-      <button type="button" class="btn btn-danger" name="button" (click)="postUpdates()" routerLink="/newsfeed">Submit!</button>
+      <div class="d-flex flex-row justify-content-center mb-4">
+        <button type="button" class="btn btn-success" name="button" (click)="postUpdates()" routerLink="/newsfeed">Submit!</button>
+      </div>
     </div>
   </div>
 </div>
