--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -9,7 +9,7 @@
     </div>
     <div class="col-sm-3 col-md-3 col-lg-3 mt-4 px-0">
       <sidebar-right></sidebar-right>
-    </div>  
+    </div>
   </div>
 
   <div class="row justify-content-center">
@@ -20,4 +20,4 @@
   <!-- User signed in?
   {{authService.userSignedIn$ | async}} -->
   <div class="container-fluid"><router-outlet></router-outlet></div>
-  <button type="button" class="btn btn-outline-warning" id="feedback">Submit Feedback</button>
+  <!-- <button type="button" class="btn btn-outline-warning" id="feedback">Submit Feedback</button> -->
