--- a/src/app/login/login.component.css
+++ b/src/app/login/login.component.css
@@ -5,12 +5,14 @@ h1 {
   color: #433089;
   margin-top: 50px;
   font-size: 350%;
+  text-align: center; 
 }
 
 .card {
   box-sizing: border-box;
   border: 1px solid #D4D4D4;
   background-color: #FFFFFF; 
+  height: 100%;
 }
 
 .login-page {
@@ -34,6 +36,7 @@ h1 {
   background: #FFFFFF;
   max-width: 360px;
   margin: 0 auto 100px;
+  margin-bottom: 50px;
   padding: 45px;
   text-align: center;
 }
@@ -133,4 +136,5 @@ body {
   box-shadow: 0 19px 30px 0 rgba(0,0,0,0.2);
   margin-top: 5px;
   margin-bottom: 10px;
+  min-width: 500.837px;
 }
