--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -42,10 +42,11 @@
     </div>
   </div>
 </div> -->
-<div class="container-fluid">
+<div class="container-fluid" style="min-height: 100%">
   <div class="d-flex justify-content-center card mt-4">
-    <div class="container-fluid mt-4">
+    <div class="container-fluid mt-4 justify-content-center">
       <div *ngIf="state == 'login'">
+        <h1>Sign in</h1>
         <div class="forum_container">
           <div class="form">
             <img src="assets/img/Lazsoc-logo.png" style="width:100px; height:auto; margin-bottom:10px;">
