Changes to Font Size and Shadow on Login Page

--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -42,8 +42,8 @@
     </div>
   </div>
 </div> -->
-<div class="container-fluid" style="min-height: 100%">
-  <div class="d-flex justify-content-center card mt-4">
+<div class="container-fluid">
+  <div class="d-flex justify-content-center mt-4">
     <div class="container-fluid mt-4 justify-content-center">
       <div *ngIf="state == 'login'">
         <h1>Sign in</h1>
