--- a/src/app/discount/discount.component.css
+++ b/src/app/discount/discount.component.css
@@ -1,3 +1,43 @@
 .discount-logo {
   width: 33%;
 }
+.card {
+	border-radius:0;
+}
+
+.big-gold-text {
+	height: 48px;
+	width: 70px;
+	color: #FCB518;
+	font-family: Lato-Black;
+	font-size: 40px;
+	font-weight: 900;
+	line-height: 48px;
+}
+
+.sub-font {
+	font-family: Lato-Regular;
+	font-size: 16px;
+	font-weight: 600;
+	line-height: 19px;
+}
+
+.gold-button {
+	display:block;
+	transform:translate(50%,0%);
+	width:50%;
+	padding:5px;
+	text-align:center;
+	border: 2px solid #FCB518;
+	border-radius: 2px;
+	background-color: #FCB518;
+}
+
+.white-font {
+	color: #FFFFFF;
+	font-family: Lato-Regular;
+	font-size: 16px;
+	font-weight: 900;
+	line-height: 19px;
+	text-align: center;
+}
