--- a/src/app/nav-bar/laz-navbar.html
+++ b/src/app/nav-bar/laz-navbar.html
@@ -16,7 +16,7 @@
       <li class="nav-item mr-4" style="cursor:pointer">
         <a class="nav-link" routerLink="/resources" routerLinkActive="active">RESOURCES</a>
       </li>
-      <li class="nav-item dropdown mr-3">
+      <li class="nav-item dropdown mr-3" style="cursor:pointer">
         <a class="nav-link dropdown-toggle" id="getInvolvedDropdown" data-toggle="dropdown" aria-haspopup="true" aria-expanded="false">
           GET INVOLVED
         </a>
@@ -39,7 +39,7 @@
         <div class="dropdown-menu profile-dropdown" aria-labelledby="navbarDropdownMenuLink" >
           <a class="dropdown-item" routerLink="/profile/{{authService.authService.currentUserData.id}}">View Profile</a>
           <a class="dropdown-item" routerLink="/update">Update Profile Info</a>
-          <a class="dropdown-item" (click)="signOut()">Sign Out</a>
+          <a class="dropdown-item" style="cursor:pointer" (click)="signOut()">Sign Out</a>
         </div>
       </li>
     </ul>
