--- a/src/app/newsfeed-container/newsfeed-container.component.html
+++ b/src/app/newsfeed-container/newsfeed-container.component.html
@@ -20,12 +20,12 @@
       </div> -->
     </div>
     <div class="col-sm-5 col-md-5 col-lg-5 px-2 mt-2">
-      <!-- <div class="d-flex flex-row mt-3">
+      <div class="d-flex flex-row mt-3">
         <input class="search-bar" id="exampleInputEmail1">
         <div class="search-button">
           <span class="search-text center-align">Search</span>
         </div>
-      </div> -->
+      </div>
       <div class="d-flex flex-row mt-2 justify-content-left">
         <span class="filters-text mx-2 mt-1" style="font-family:Lato-Bold">Filters:</span>
         <div class="dropdown m-0 p-0">
