--- a/src/app/resources/resources.component.css
+++ b/src/app/resources/resources.component.css
@@ -17,17 +17,17 @@
 }
 
 .topactive {
-  border-bottom:6px solid gold;
+  border-bottom:6px solid #FCB518;
   color:black;
 }
 
 .active {
-  border-left:6px solid gold;
+  border-left:6px solid #FCB518;
   padding-left:9px;
   color:black;
 }
 
 .top-text-active {
-  border-bottom:6px solid gold;
+  border-bottom:6px solid #FCB518;
   color:black;
 }
