--- a/src/app/resources/resources.component.html
+++ b/src/app/resources/resources.component.html
@@ -16,8 +16,8 @@
       </div>
     </div>
   </div>
-  <div class="row justify-content-center mt-4" *ngIf="resourceType != 'discountProgram'">
-    <div class="col-sm-3 col-md-3 col-lg-3">
+  <div class="row justify-content-center mt-1" *ngIf="resourceType != 'discountProgram'">
+    <div class="col-sm-3 col-md-3 col-lg-3 pr-1">
       <div class="card" *ngIf="resourceType == 'studentResources'">
         <div *ngFor="let document of studentResources; let i = index">
           <div class="side-heading py-2" (click)="selectedDoc = i" [ngClass]="{active: selectedDoc == i}">{{document.name}}</div>
@@ -29,7 +29,8 @@
         </div>
       </div>
     </div>
-    <div class="col-sm-8 col-md-8 col-lg-8">
+    <div class="col-sm-8 col-md-8 col-lg-8 pl-1">
+
       <div *ngIf="resourceType == 'studentResources'">
         <embed [src]="'assets/pdfs/' + studentResources[0].path | safe" width="100%" height="1000px" *ngIf="selectedDoc == 0"/>
         <embed [src]="'assets/pdfs/' + studentResources[1].path | safe" width="100%" height="1000px" *ngIf="selectedDoc == 1"/>
