--- a/src/app/sidebar/profile-sidebar.html
+++ b/src/app/sidebar/profile-sidebar.html
@@ -1,13 +1,12 @@
 <div class="card sticky" *ngIf="tokenService.userSignedIn()">
-    <img src="assets/img/cover-photo.jpeg" style="height:100px" class="card-image-top">
-    <img src="https://mediasia.iafor.org/wp-content/uploads/sites/30/2017/02/IAFOR-Blank-Avatar-Image.jpg" class="profile-avatar mr-2">
-    <div class="card-header d-flex align-items-center py-2">
-      <div class="d-flex flex-column" style="transform:translate(4.5em,0)">
-        <h4 class="profile-name my-0">{{tokenService.currentUserData.first_name}} {{tokenService.currentUserData.last_name}}</h4>
-        <span class="profile-subheader my-0">{{tokenService.currentUserData.program}}</span>
-      </div>
+  <img src="assets/img/cover-photo.jpeg" style="height:100px" class="card-image-top">
+  <img src="https://mediasia.iafor.org/wp-content/uploads/sites/30/2017/02/IAFOR-Blank-Avatar-Image.jpg" class="profile-avatar mr-2">
+  <div class="card-header d-flex align-items-center py-2">
+    <div class="d-flex flex-column" style="transform:translate(4.5em,0); cursor:pointer" routerLink="/profile/{{tokenService.currentUserData.id}}">
+      <h4 class="profile-name my-0">{{tokenService.currentUserData.first_name}} {{tokenService.currentUserData.last_name}}</h4>
+      <span class="profile-subheader my-0">{{tokenService.currentUserData.program}}</span>
     </div>
-
+  </div>
   <ul class="list-group">
     <li class="list-group-item list-group-item-action py-2" style="cursor:pointer" routerLink="/update" *ngIf="tokenService.userSignedIn()">Update Profile</li>
     <li class="list-group-item list-group-item-action py-2" style="cursor:pointer" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">Events and Blog</li>
@@ -16,16 +15,18 @@
   </ul>
 </div>
 <div class="card sticky" *ngIf="!tokenService.userSignedIn()">
-  <img src="assets/img/cover-photo.jpeg" style="height:100px" class="card-image-top">
-  <div class="card-block">
-    <span class="card-header-text">Sign up for LazBeans here!</span>
+  <div class="card-block" style="text-align:center">
+    <img src="assets/img/icons/Profile.svg" style="width:40%">
+    <br>
+    <span class="join-the-community">Join the Community</span><br>
+    <span class="signup-subheader">Learn about all Lazsoc has to offer</span>
+    <br><br>
+    <div class="signup-button mb-2">
+      <span class="signup-btn-text">Sign up!</span>
+    </div>
+    <span class="login-text">Or just log in!</span>
   </div>
-  <ul class="list-group">
-    <li class="list-group-item list-group-item-action py-2" style="border-radius:0" (click)="setNewsfeedState('all')" [ngClass]="{active: newsfeedState == 'all'}">All Events</li>
-    <li class="list-group-item list-group-item-action py-2" style="border-radius:0" (click)="setNewsfeedState('events')" [ngClass]="{active: newsfeedState == 'events'}">Saved Events</li>
-  </ul>
 </div>
-
 <!-- If user not signed in -->
 <!-- <div class="card sticky" *ngIf="!(authService.userSignedIn$ | async)">
   <div class="list-group">
