--- a/src/app/sidebar/sidebar.component.css
+++ b/src/app/sidebar/sidebar.component.css
@@ -1,167 +1,215 @@
 html {
-    font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
-    font-size: 14px;
+  font-family: Lato, 'Helvetica Neue', Arial, Helvetica, sans-serif;
+  font-size: 14px;
 }
 
 h5 {
-    font-size: 1.28571429em;
-    font-weight: 700;
-    line-height: 1.2857em;
-    margin: 0;
+  font-size: 1.28571429em;
+  font-weight: 700;
+  line-height: 1.2857em;
+  margin: 0;
 }
 
 .card {
-    font-size: 1em;
-    overflow: hidden;
-    padding: 0;
-    /*border: 1 solid  #83868a;*/
-    border-radius: 0;
-    /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
+  font-size: 1em;
+  overflow: hidden;
+  padding: 0;
+  /*border: 1 solid  #83868a;*/
+  border-radius: 0;
+  /*box-shadow: 0 3px 6px rgba(0,0,0,0.16), 0 3px 6px rgba(0,0,0,0.23);*/
 }
 
 .card-block {
-    font-size: 1em;
-    position: relative;
-    margin: 0;
-    padding: 1em;
-    border: none;
-    border-top: 1px solid rgba(34, 36, 38, .1);
-    box-shadow: none;
+  font-size: 1em;
+  position: relative;
+  margin: 0;
+  padding: 1em;
+  border: none;
+  border-top: 1px solid rgba(34, 36, 38, .1);
+  box-shadow: none;
+}
+
+.list-group-item {
+  font-family:Lato-Regular;
+  font-size:1.1em;
 }
 
 .card-img-top {
-    display: block;
-    width: 100%;
-    height: auto;
-    border-radius:0;
+  display: block;
+  width: 100%;
+  height: auto;
+  border-radius: 0;
 }
 
 .club-title {
-    font-size: 1.15em;
-    font-family:Lato-Bold;
-    line-height: 1.2857em;
-    font-weight:500;
+  font-size: 1.15em;
+  font-family: Lato-Bold;
+  line-height: 1.2857em;
+  font-weight: 500;
 }
+
 .card-datetime {
-  font-family:Lato-Regular;
-  font-size:1em;
+  font-family: Lato-Regular;
+  font-size: 1em;
 }
 
 .card-text {
-    font-family:Lato-Regular;
-    clear: both;
-    margin-top: .5em;
-    /*margin-left: 65px;*/
-    font-size:0.9em;
-    color: rgba(0, 0, 0, .68);
+  font-family: Lato-Regular;
+  clear: both;
+  margin-top: .5em;
+  /*margin-left: 65px;*/
+  font-size: 0.9em;
+  color: rgba(0, 0, 0, .68);
 }
 
 .card-footer {
-    font-size: 1em;
-    position: static;
-    top: 0;
-    left: 0;
-    max-width: 100%;
-    padding: .75em 1em;
-    color: rgba(0, 0, 0, .4);
-    border-top: 1px solid rgba(0, 0, 0, .05) !important;
-    background: #fff;
+  font-size: 1em;
+  position: static;
+  top: 0;
+  left: 0;
+  max-width: 100%;
+  padding: .75em 1em;
+  color: rgba(0, 0, 0, .4);
+  border-top: 1px solid rgba(0, 0, 0, .05) !important;
+  background: #fff;
 }
 
 .card-inverse .btn {
-    border: 1px solid rgba(0, 0, 0, .05);
+  border: 1px solid rgba(0, 0, 0, .05);
 }
 
 .profile {
-    position: absolute;
-    top: -12px;
-    display: inline-block;
-    overflow: hidden;
-    box-sizing: border-box;
-    width: 50px;
-    height: 50px;
-    margin: 0;
-    border: 1px solid #fff;
-    border-radius: 50%;
+  position: absolute;
+  top: -12px;
+  display: inline-block;
+  overflow: hidden;
+  box-sizing: border-box;
+  width: 50px;
+  height: 50px;
+  margin: 0;
+  border: 1px solid #fff;
+  border-radius: 50%;
 }
 
 .profile-avatar {
-    display: block;
-    position:absolute;
-    transform: translate(10px, 50px);
-    width: 90px;
-    height:90px;
-    border-radius: 50%;
-    border:2px solid white;
+  display: block;
+  position: absolute;
+  transform: translate(10px, 50px);
+  width: 90px;
+  height: 90px;
+  border-radius: 50%;
+  border: 2px solid white;
 }
+
 .club-avatar {
-    display: block;
-    width: 50px;
-    height:50px;
-    border-radius: 50%;
-    /*border: 1px solid darkgrey;*/
+  display: block;
+  width: 50px;
+  height: 50px;
+  border-radius: 50%;
+  /*border: 1px solid darkgrey;*/
 }
 
 .profile-inline {
-    position: relative;
-    top: 0px;
-    display: inline-block;
-    /*border: 1px solid grey;*/
+  position: relative;
+  top: 0px;
+  display: inline-block;
+  /*border: 1px solid grey;*/
 }
 
-.profile-inline ~ .card-title {
-    display: inline-block;
-    margin-left: 4px;
-    vertical-align: top;
+.profile-inline~.card-title {
+  display: inline-block;
+  margin-left: 4px;
+  vertical-align: top;
 }
 
-.avatar{
+.avatar {
   border-radius: 50%;
   width: 50px;
-  height:50px;
+  height: 50px;
 }
 
 .profile-name {
   margin-left: 10px;
   font-size: 1.1em;
-  font-family:Lato-Bold;
-  font-weight:500;
+  font-family: Lato-Black;
+  font-weight: 500;
 }
-.profile-subheader {
-  margin-left:10px;
+
+.join-the-community {
+  margin-left: 10px;
+  font-size: 1.2em;
+  font-family: Lato-Black;
+  font-weight: 500;
+}
+
+.signup-subheader {
+  color: #83868A;
+  font-family: Lato-Regular;
+  font-size: 1em;
+}
+
+.signup-button {
+  display: block;
+  transform: translate(50%, 0%);
+  width: 50%;
+  border: 2px solid #433089;
+  border-radius: 5px;
+  background-color: #433089;
+}
+
+.signup-btn-text {
+  color: #FFFFFF;
+  font-family: Lato-Regular;
+  font-size: 14px;
+  font-weight: 600;
+  text-align: center;
+}
+
+.login-text {
+  color: #0083C1;
+  font-family: Lato-Regular;
   font-size: 0.8em;
-  font-family:Lato-Regular;
+  text-align: center;
 }
+
+.profile-subheader {
+  margin-left: 10px;
+  font-size: 0.8em;
+  font-family: Lato-Regular;
+}
+
 .event-title-font {
-  font-family:Lato-Bold;
-  font-size:0.8em;
-  font-weight:bolder;
+  font-family: Lato-Bold;
+  font-size: 0.8em;
+  font-weight: bolder;
 }
+
 .event-sub-heading {
-  font-family:Lato-Regular;
-  font-size:0.7em;
+  font-family: Lato-Regular;
+  font-size: 0.7em;
 }
 
 .sticky {
-    position: -webkit-sticky;
-    position: sticky;
-    top: 104px;
+  position: -webkit-sticky;
+  position: sticky;
+  top: 104px;
 }
+
 .sticky-share {
   position: -webkit-sticky;
   position: sticky;
   top: 440px;
 }
 
-.sticky-updates{
+.sticky-updates {
   position: -webkit-sticky;
   position: sticky;
   top: 315px;
 }
 
-.card-header{
-  font-family:Lato-Bold;
-  font-size:1.1em;
+.card-header {
+  font-family: Lato-Bold;
+  font-size: 1.1em;
   background-color: white;
 }
 
@@ -170,54 +218,58 @@ h5 {
 }
 
 .month {
-  font-family:Lato-Regular;
-  font-size:10px;
+  font-family: Lato-Regular;
+  font-size: 10px;
 }
 
 .date-number {
-  font-family:Lato-Black;
-  font-size:20px;
+  font-family: Lato-Black;
+  font-size: 20px;
 }
 
 .share_button {
-  font-weight:bold;
-  color:rgba(66,44,137,1);
+  font-weight: bold;
+  color: rgba(66, 44, 137, 1);
 }
 
 .icon {
-  height:18px;
-  margin-right:10px;
+  height: 18px;
+  margin-right: 10px;
 }
+
 .job-posting-subheader {
-  font-family:Lato-Medium;
-  font-size:12px;
-  color:#83868a;
-  letter-spacing:0;
-  text-align:left;
+  font-family: Lato-Medium;
+  font-size: 12px;
+  color: #83868a;
+  letter-spacing: 0;
+  text-align: left;
 }
+
 .open-positions-icon {
-  width:20%;
+  width: 20%;
 }
 
 .card-header-text {
-  font-family:Lato-Black;
-  font-size:16px;
-  color:#83868a;
-  letter-spacing:0;
-  text-align:left;
+  font-family: Lato-Black;
+  font-size: 16px;
+  color: #83868a;
+  letter-spacing: 0;
+  text-align: left;
 }
 
 .see-other-postings {
-  font-family:Lato-Semibold;
-  font-size:12px;
-  color:#433089;
+  font-family: Lato-Semibold;
+  font-size: 12px;
+  color: #433089;
 }
-.social-link-title{
-  font-family:Lato-Semibold;
-  font-size:12px;
+
+.social-link-title {
+  font-family: Lato-Semibold;
+  font-size: 12px;
 }
+
 .social-link-link {
-  font-family:Lato-Regular;
-  font-size:10px;
-  color:#0083c1;
+  font-family: Lato-Regular;
+  font-size: 10px;
+  color: #0083c1;
 }
